--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ notify-rust = "4.8.0"
 once_cell = "1.17.1"
 rayon = "1.7.0"
 regex = "1.7.1"
-reqwest = { version = "0.11.14", features = ["blocking", "json", "deflate"] }
+reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "deflate", "rustls-tls"] }
 resolve-path = "0.1.0"
 sanitize-filename = "0.4.0"
 serde = { version = "1.0.153", features = ["derive"] }
