--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 atty = "0.2.14"
+base64 = "0.21.0"
 clap = { version = "4.1.8", features = ["derive"] }
 dirs = "4.0.0"
 infer = "0.13.0"
