--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ atty = "0.2.14"
 base64 = "0.21.0"
 clap = { version = "4.1.8", features = ["derive"] }
 dirs = "4.0.0"
+filetime = "0.2.20"
+fs_extra = "1.3.0"
 infer = "0.13.0"
 log = "0.4.17"
 log4rs = "1.2.0"
@@ -23,4 +25,5 @@ sanitize-filename = "0.4.0"
 serde = { version = "1.0.153", features = ["derive"] }
 serde_json = "1.0.94"
 toml = "0.7.2"
+trash = "3.0.1"
 which = "4.4.0"
