--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,5 @@ serde = { version = "1.0.153", features = ["derive"] }
 serde_json = "1.0.94"
 toml = "0.7.2"
 trash = "3.0.1"
+url = "2.3.1"
 which = "4.4.0"
