--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.1.8", features = ["derive"] }
 dirs = "4.0.0"
 filetime = "0.2.20"
 fs_extra = "1.3.0"
+futures = "0.3.27"
 infer = "0.13.0"
 log = "0.4.17"
 log4rs = "1.2.0"
@@ -24,6 +25,8 @@ resolve-path = "0.1.0"
 sanitize-filename = "0.4.0"
 serde = { version = "1.0.153", features = ["derive"] }
 serde_json = "1.0.94"
+teloxide = { version = "0.12.2", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
+tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
 toml = "0.7.2"
 trash = "3.0.1"
 url = "2.3.1"
