--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ resolve-path = "0.1.0"
 sanitize-filename = "0.4.0"
 serde = { version = "1.0.153", features = ["derive"] }
 serde_json = "1.0.94"
-teloxide = { optional = true, version = "0.12.2", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
+teloxide = { optional = true, version = "0.12.2", default-features = false, features = ["macros", "rustls"] }
 tokio = { optional = true, version = "1.26.0", features = ["macros", "rt-multi-thread"] }
 toml = "0.7.2"
 trash = "3.0.1"
