Add missing `ffmpeg` and `yt-dlp` packages to docker

--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -12,6 +12,14 @@ ENV RUSTFLAGS='-C target-feature=+crt-static'
 RUN cargo install --path . --target=x86_64-unknown-linux-musl --features "$features"
 
 FROM alpine as runner
-WORKDIR /usr/src/app
+RUN apk add \
+  ffmpeg \
+  python3 \
+  && echo "Done installing packages"
+RUN \
+  wget https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -O /usr/local/bin/yt-dlp \
+  && chmod +x /usr/local/bin/yt-dlp \
+  && ln -s /usr/local/bin/yt-dlp /usr/local/bin/youtube-dl \
+  && echo "yt-dlp version: $(yt-dlp --version)"
 COPY --from=builder /usr/local/cargo/bin/meme-download /usr/local/bin/
 ENTRYPOINT ["meme-download"]
