--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,6 @@ services:
     build:
       context: .
       dockerfile: .docker/app/Dockerfile
+      args:
+        - user_id=${user_id:-1000}
+        - group_id=${group_id:-1000}
