--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ resolver = "2"
 anyhow = "1.0.71"
 atty = "0.2.14"
 base64 = "0.21.0"
-clap = { version = "4.1.8", features = ["derive"] }
+clap = { version = "4.1.8", features = ["derive", "env"] }
 dirs = "4.0.0"
 filetime = "0.2.20"
 fs_extra = "1.3.0"
