Add `all` feature to cargo
The `all` feature should just enable all features.
We'll see how to handle incompatible flags when we get there.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ which = "4.4.0"
 
 [features]
 default = []
+all = ["desktop-notifications", "telegram-bot"]
 bots = ["telegram-bot"]
 desktop-notifications = ["dep:notify-rust"]
 telegram-bot = ["dep:tokio", "dep:teloxide", "dep:futures"]
