--- a/crates/downloader/Cargo.toml
+++ b/crates/downloader/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "downloader"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 
 [dependencies]
-fixers = { version = "0.3.0", path = "../fixers" }
+fixers = { version = "*", path = "../fixers" }
 log = "0.4.19"
 once_cell = "1.18.0"
 rayon = "1.7.0"
@@ -18,5 +18,5 @@ reqwest = { version = "0.11.14", default-features = false, features = [
   "rustls-tls",
 ] }
 url = "2.4.0"
-config = { version = "0.3.0", path = "../config" }
-helpers = { version = "0.3.0", path = "../helpers" }
+config = { version = "*", path = "../config" }
+helpers = { version = "*", path = "../helpers" }
