Fix app complaining on some flag levels

--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -22,7 +22,7 @@ tokio = { version = "1.28.2", features = [
 [features]
 default = ["ask-for-url"]
 all = ["desktop-notifications", "bots"]
-bots = ["telegram-bot"]
+bots = ["telegram-bot", "dep:tokio"]
 ask-for-url = ["atty"]
 desktop-notifications = ["dep:notify-rust"]
-telegram-bot = ["config/telegram-bot", "bots/telegram", "dep:tokio"]
+telegram-bot = ["config/telegram-bot", "bots/telegram"]
