--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 clap = { version = "4.3.3", features = ["derive", "env"] }
-dirs = "5.0.1"
+directories = "5.0.1"
 lazy_static = "1.4.0"
 resolve-path = "0.1.0"
 serde = "1.0.164"
