--- a/crates/bots/Cargo.toml
+++ b/crates/bots/Cargo.toml
@@ -14,6 +14,7 @@ helpers = { version = "*", path = "../helpers" }
 infer = "0.13.0"
 log = "0.4.19"
 rayon = "1.7.0"
+reqwest = { version = "0.11.18", default-features = false }
 scopeguard = "1.1.0"
 teloxide = { optional = true, version = "0.12.2", default-features = false, features = [
   "macros",
