--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -12,6 +12,7 @@ directories = "5.0.1"
 lazy_static = "1.4.0"
 resolve-path = "0.1.0"
 serde = "1.0.164"
+serde_json = { version = "1.0.99", features = ["alloc", "preserve_order"] }
 toml = "0.7.4"
 which = "4.4.0"
 
