--- a/crates/fixers/Cargo.toml
+++ b/crates/fixers/Cargo.toml
@@ -10,4 +10,5 @@ fs_extra = "1.3.0"
 helpers = { version = "*", path = "../helpers" }
 infer = "0.13.0"
 log = "0.4.19"
+phf = { version = "0.11.2", features = ["macros"] }
 rayon = "1.7.0"
