--- a/crates/fixers/Cargo.toml
+++ b/crates/fixers/Cargo.toml
@@ -8,7 +8,8 @@ config = { version = "*", path = "../config" }
 filetime = "0.2.21"
 fs_extra = "1.3.0"
 helpers = { version = "*", path = "../helpers" }
+image = "0.24.6"
 infer = "0.13.0"
 log = "0.4.19"
-phf = { version = "0.11.2", features = ["macros"] }
 rayon = "1.7.0"
+scopeguard = "1.2.0"
