--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ edition = "2021"
 
 [profile.release]
 strip = true
-# opt-level = "z"
-# lto = true
-# codegen-units = 1
+# opt-level = "s"
+lto = "thin"
+codegen-units = 1
