--- a/crates/app-downloader/Cargo.toml
+++ b/crates/app-downloader/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "downloader"
+name = "app-downloader"
 version = "0.3.1"
 edition = "2021"
 
 [dependencies]
-fixers = { version = "*", path = "../fixers" }
+app-fixers = { version = "*", path = "../app-fixers" }
 log = "0.4.19"
 once_cell = "1.18.0"
 rayon = "1.7.0"
@@ -18,5 +18,5 @@ reqwest = { version = "0.11.14", default-features = false, features = [
   "rustls-tls",
 ] }
 url = "2.4.0"
-config = { version = "*", path = "../config" }
-helpers = { version = "*", path = "../helpers" }
+app-config = { version = "*", path = "../app-config" }
+app-helpers = { version = "*", path = "../app-helpers" }
