--- a/crates/app-fixers/Cargo.toml
+++ b/crates/app-fixers/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "fixers"
+name = "app-fixers"
 version = "0.3.0"
 edition = "2021"
 
 [dependencies]
-config = { version = "*", path = "../config" }
+app-config = { version = "*", path = "../app-config" }
 filetime = "0.2.21"
 fs_extra = "1.3.0"
-helpers = { version = "*", path = "../helpers" }
+app-helpers = { version = "*", path = "../app-helpers" }
 image = "0.24.6"
 infer = "0.13.0"
 log = "0.4.19"
