--- a/crates/app-helpers/Cargo.toml
+++ b/crates/app-helpers/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "helpers"
+name = "app-helpers"
 version = "0.3.0"
 edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
 base64 = "0.21.2"
-config = { version = "*", path = "../config" }
+app-config = { version = "*", path = "../app-config" }
 log = "0.4.19"
 serde = "1.0.164"
 serde_json = "1.0.96"
