--- a/crates/app-bots/Cargo.toml
+++ b/crates/app-bots/Cargo.toml
@@ -24,3 +24,6 @@ tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
 
 [features]
 telegram = ["app-config/telegram-bot", "dep:teloxide"]
+
+[lints]
+workspace = true
