--- a/crates/app-downloader/Cargo.toml
+++ b/crates/app-downloader/Cargo.toml
@@ -20,3 +20,6 @@ reqwest = { version = "0.11.14", default-features = false, features = [
 url = "2.4.0"
 app-config = { version = "*", path = "../app-config" }
 app-helpers = { version = "*", path = "../app-helpers" }
+
+[lints]
+workspace = true
