Fall back to generic downloader if yt-dlp fails

--- a/crates/app-downloader/Cargo.toml
+++ b/crates/app-downloader/Cargo.toml
@@ -20,6 +20,7 @@ reqwest = { version = "0.11.14", default-features = false, features = [
 url = "2.4.0"
 app-config = { version = "*", path = "../app-config" }
 app-helpers = { version = "*", path = "../app-helpers" }
+mime_guess = "2.0.4"
 
 [lints]
 workspace = true
