--- a/crates/app-fixers/Cargo.toml
+++ b/crates/app-fixers/Cargo.toml
@@ -10,7 +10,7 @@ fs_extra = "1.3.0"
 app-helpers = { version = "*", path = "../app-helpers" }
 image = "0.24.6"
 infer = "0.13.0"
-log = "0.4.19"
+app-logger = { version = "*", path = "../app-logger" }
 rayon = "1.7.0"
 resolve-path = "0.1.0"
 scopeguard = "1.2.0"
