--- a/crates/app-helpers/Cargo.toml
+++ b/crates/app-helpers/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 anyhow = "1.0.71"
 base64 = "0.21.2"
 app-config = { version = "*", path = "../app-config" }
-log = "0.4.19"
+app-logger = { version = "*", path = "../app-logger" }
 serde = "1.0.164"
 serde_json = "1.0.96"
 trash = "3.0.3"
