--- a/crates/app-downloader/Cargo.toml
+++ b/crates/app-downloader/Cargo.toml
@@ -15,7 +15,9 @@ reqwest = { version = "0.11.14", default-features = false, features = [
   "blocking",
   "json",
   "deflate",
-  "rustls-tls",
+  "gzip",
+  "brotli",
+  "native-tls-vendored",
 ] }
 url = "2.4.0"
 app-config = { version = "*", path = "../app-config" }
