--- a/crates/app-downloader/Cargo.toml
+++ b/crates/app-downloader/Cargo.toml
@@ -24,6 +24,7 @@ url = "2.4.0"
 app-config = { version = "*", path = "../app-config" }
 app-helpers = { version = "*", path = "../app-helpers" }
 mime_guess = "2.0.4"
+unicode-segmentation = "1.10.1"
 
 [lints]
 workspace = true
