--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ description = "A meme downloader"
 edition = "2021"
 
 [workspace.lints.clippy]
+nursery = { level = "warn", priority = -1 }
 pedantic = { level = "warn", priority = -1 }
 module_name_repetitions = "allow"
 single_match_else = "allow"
