--- a/crates/app-config/Cargo.toml
+++ b/crates/app-config/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "app-config"
-version = "0.3.0"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+description.workspace = true
+edition.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,8 +15,8 @@ lazy_static = "1.4.0"
 resolve-path = "0.1.0"
 serde = "1.0.164"
 serde_json = { version = "1.0.99", features = ["alloc", "preserve_order"] }
-toml = "0.7.4"
-which = "4.4.0"
+toml = "0.8.10"
+which = "6.0.0"
 
 
 [features]
