--- a/crates/app-downloader/Cargo.toml
+++ b/crates/app-downloader/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "app-downloader"
-version = "0.3.1"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+description.workspace = true
+edition.workspace = true
 
 [dependencies]
-app-fixers = { version = "*", path = "../app-fixers" }
-app-logger = { version = "*", path = "../app-logger" }
+app-fixers.workspace = true
+app-logger.workspace = true
 once_cell = "1.18.0"
 rayon = "1.7.0"
 regex = "1.8.4"
@@ -21,8 +23,8 @@ reqwest = { version = "0.11.14", default-features = false, features = [
   "trust-dns",
 ] }
 url = "2.4.0"
-app-config = { version = "*", path = "../app-config" }
-app-helpers = { version = "*", path = "../app-helpers" }
+app-config.workspace = true
+app-helpers.workspace = true
 unicode-segmentation = "1.10.1"
 tl = "0.7.8"
 mime2ext = "0.1.52"
