--- a/crates/app-fixers/Cargo.toml
+++ b/crates/app-fixers/Cargo.toml
@@ -1,16 +1,18 @@
 [package]
 name = "app-fixers"
-version = "0.3.0"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+description.workspace = true
+edition.workspace = true
 
 [dependencies]
-app-config = { version = "*", path = "../app-config" }
+app-config.workspace = true
 filetime = "0.2.21"
 fs_extra = "1.3.0"
-app-helpers = { version = "*", path = "../app-helpers" }
+app-helpers.workspace = true
 image = "0.24.6"
-infer = "0.13.0"
-app-logger = { version = "*", path = "../app-logger" }
+infer = "0.15.0"
+app-logger.workspace = true
 rayon = "1.7.0"
 resolve-path = "0.1.0"
 scopeguard = "1.2.0"
