--- a/crates/app-logger/Cargo.toml
+++ b/crates/app-logger/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "app-logger"
-version = "0.3.0"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+description.workspace = true
+edition.workspace = true
 
 [dependencies]
 anyhow = "1.0.71"
 log = "0.4.19"
 log4rs = "1.2.0"
-sanitize-filename = "0.4.0"
+sanitize-filename = "0.5.0"
 
 [lints]
 workspace = true
