--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -1,16 +1,18 @@
 [package]
 name = "meme-downloader"
-version = "0.3.0"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+description.workspace = true
+edition.workspace = true
 
 [dependencies]
 anyhow = "1.0.71"
 atty = { version = "0.2.14", optional = true }
-app-bots = { version = "*", path = "../app-bots" }
-app-config = { version = "*", path = "../app-config" }
-app-downloader = { version = "*", path = "../app-downloader" }
-app-fixers = { version = "*", path = "../app-fixers" }
-app-logger = { version = "*", path = "../app-logger" }
+app-bots.workspace = true
+app-config.workspace = true
+app-downloader.workspace = true
+app-fixers.workspace = true
+app-logger.workspace = true
 notify-rust = { version = "4.8.0", optional = true, features = ["images"] }
 tokio = { version = "1.28.2", features = [
   "rt-multi-thread",
